# eh-uploader

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.cmd  build.sh
.github/workflows/: cmake.yml
src/: main.c
src/config/: config.c  config.h
src/defs/: errors.h  url_style.h
src/req/: req.c  req.h  reqbuilder.c  reqbuilder.h  res.c  res.h
src/util/: util.c  util.h
